# opencl

./: CMakeLists.txt  README.md  cuda.cpp  devices.cpp  intel.cpp  main.cpp
